--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^1.8.25",
+    "@prisma/client": "5.5.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.43.0",
+    "@trpc/next": "^10.43.0",
+    "@trpc/react-query": "^10.43.0",
+    "@trpc/server": "^10.43.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.291.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +38,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "prisma": "5.5.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
