--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "@kinde-oss/kinde-auth-nextjs": "^1.8.25",
+    "@kinde-oss/kinde-auth-nextjs": "^2.0.0",
+    "@mantine/hooks": "^7.1.7",
+    "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "5.5.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -19,23 +21,29 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.43.0",
-    "@trpc/next": "^10.43.0",
-    "@trpc/react-query": "^10.43.0",
-    "@trpc/server": "^10.43.0",
+    "@trpc/client": "^10.43.1",
+    "@trpc/next": "^10.43.1",
+    "@trpc/react-query": "^10.43.1",
+    "@trpc/server": "^10.43.1",
     "@uploadthing/react": "^5.7.0",
+    "ai": "^2.2.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.291.0",
+    "langchain": "^0.0.179",
+    "lucide-react": "^0.292.0",
     "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "openai": "^4.14.2",
+    "pdf-parse": "^1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.0",
     "react-pdf": "^7.5.1",
     "react-resize-detector": "^9.1.0",
+    "react-textarea-autosize": "^8.5.3",
     "server-only": "^0.0.1",
     "simplebar-react": "^3.2.4",
     "tailwind-merge": "^2.0.0",
@@ -44,16 +52,16 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.34",
+    "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.52.0",
     "eslint-config-next": "14.0.1",
-    "postcss": "^8",
+    "postcss": "^8.4.31",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "prisma": "5.5.2",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
