--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill",
+  "name": "parlano",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -36,13 +36,13 @@
     "langchain": "^0.0.180",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
+    "next-themes": "^0.2.1",
     "openai": "^4.15.0",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
-    "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^9.0.0",
     "react-pdf": "^7.5.1",
     "react-resize-detector": "^9.1.0",
