--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.43.1",
-    "@trpc/next": "^10.43.1",
-    "@trpc/react-query": "^10.43.1",
-    "@trpc/server": "^10.43.1",
+    "@tanstack/react-query": "^5.8.1",
+    "@trpc/client": "11.0.0-alpha-next-2023-11-03-11-28-35.97",
+    "@trpc/react-query": "11.0.0-alpha-next-2023-11-03-11-28-35.97",
+    "@trpc/server": "11.0.0-alpha-next-2023-11-03-11-28-35.97",
     "@uploadthing/react": "^5.7.0",
     "ai": "^2.2.21",
     "class-variance-authority": "^0.7.0",
