--- a/apps/ai-proxy-worker/package.json
+++ b/apps/ai-proxy-worker/package.json
@@ -13,6 +13,8 @@
 		"wrangler": "^3.0.0"
 	},
 	"dependencies": {
+		"@clerk/clerk-sdk-node": "^4.12.21",
+		"@unkey/api": "^0.12.0",
 		"ai": "^2.2.23",
 		"openai": "^4.19.0"
 	}
