--- a/apps/post-signup-worker/package.json
+++ b/apps/post-signup-worker/package.json
@@ -11,5 +11,10 @@
     "@cloudflare/workers-types": "^4.20230419.0",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.12.21",
+    "@unkey/api": "^0.12.0",
+    "svix": "^1.14.0"
   }
 }
