--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -19,3 +19,6 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=
+
+UNKEY_TOKEN=
+UNKEY_API_ID=
