--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,8 @@
     "@trpc/client": "11.0.0-alpha-next-2023-11-11-17-32-01.100",
     "@trpc/react-query": "11.0.0-alpha-next-2023-11-11-17-32-01.100",
     "@trpc/server": "11.0.0-alpha-next-2023-11-11-17-32-01.100",
+    "@unkey/api": "^0.12.0",
+    "@unkey/nextjs": "^0.13.2",
     "@uploadthing/react": "^6.0.0",
     "ai": "^2.2.23",
     "class-variance-authority": "^0.7.0",
